--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.otuz">
 
+    <!-- Permissions -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA" />
+    <!-- /Permissions -->
+
+    <!-- Features -->
+    <!-- OpenGL ES 2.0 for Google Maps Android API v2-->
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+    <!-- /Features -->
 
     <application
         android:allowBackup="true"
@@ -17,6 +24,8 @@
         <!-- Meta-Datas -->
         <!-- App ID for Facebook SDK. -->
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <!-- API key for Google Maps. -->
+        <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="@string/google_maps_api_key" />
         <!-- /Meta-Datas -->
 
         <!-- Activities -->
@@ -27,17 +36,13 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".controller.activity.WalkthroughActivity" android:label="@string/app_name" android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".controller.activity.WalkthroughActivity" android:label="@string/app_name" android:theme="@style/AppTheme.NoActionBar"/>
 
-        </activity>
+        <activity android:name=".controller.activity.ShoppingListActivity" android:label="@string/app_name" android:theme="@style/AppTheme.NoActionBar"/>
 
-        <activity android:name=".controller.activity.ShoppingCartActivity" android:label="@string/app_name" android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".controller.activity.BarcodeScanActivity" android:label="@string/app_name" android:theme="@style/AppTheme.NoActionBar"/>
 
-        </activity>
-
-        <activity android:name=".controller.activity.BarcodeScanActivity" android:label="@string/app_name" android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+        <activity android:name=".controller.activity.UserProfileActivity" android:label="@string/app_name" android:theme="@style/AppTheme.NoActionBar"/>
 
         <!-- FacebookActivity must be added here for login and share with SDK operations.-->
         <activity android:name="com.facebook.FacebookActivity" android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:label="@string/app_name" />
